# hellgate-watcher

./: .env  .gitignore  README.md  bot.py  channels.json  config.py  covered_battle_reports.json  hellgate_watcher copy.py  hellgate_watcher.py  main.py  pyproject.toml  tests.py
data/: channels.json  reported_battles.json
go/: go.mod  go.sum  main.go
go/db/: db.go
go/handlers/: handlers.go
go/models/: models.go
go/watcher/: albion_objects.go  config.go  equipment.go  types.go  watcher.go
node/: .env.example  bot.js  image_generator.js  package.json  test_generate.js
src/: albion_objects.py  bot.py  hellgate_watcher.py
