[project]
name = "hellgate-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "pillow",
    "ipynb>=0.5.1",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
